# jurisdiction-rs

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  build.rs
.github/workflows/: release.yaml
data/: country-region.json
src/: definition.rs  jurisdiction.rs  lib.rs  region.rs
