[package]
name = "jurisdiction"
version = "0.1.0"
authors = ["Vegard Sandengen <vegard@orcalabs.no>"]
edition = "2018"
license = "MIT"
description = """
A lightweight API-friendly abstraction for the jurisdiction in the world,
and their accompanying static information pertaining to that jurisdiction.
Information available includes:
* ISO 3166 country codes
* UN M49 Region classifications
"""
homepage = "https://www.orcalabs.no"
repository = "https://gitlab.com/orcalabs.public/jursidiction-rs"
keywords = ["jurisdiction", "country", "ISO-3166"]
categories = ["localization", "encoding"]
readme = "README.md"
documentation = "https://docs.rs/jurisdiction"

[features]
default = ["full"]

full = [
    "region",
]

# Enable region capabilities sourced from UN M49 statistics division.
region = []

[dependencies]
anyhow = "1"
lazy_static = "1"
static_assertions = "1.1"
serde = { version = "1", features = ["derive"]}
serde_plain = "0.3"

[build-dependencies]
anyhow = "1"
proc-macro2 = "1"
quote = "1"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
